Discord OAuth2 now successfully working. Begun work on authorization policies

--- a/TowerOfDaedelus_WebApp/Pages/Index.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Your here a little early. This site is still under construction.</p> 
+    <p>In the meantime, feel free to check out the project on: <a href="https://www.worldanvil.com/w/the-towers-of-daedalus-thedrakonlord">world anvil</a></p> 
 </div>
