--- a/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Authorization
+<!DOCTYPE html>
+@inject SignInManager<IdentityUser> signInManager;
+@inject IAuthorizationService AuthorizationService;
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,11 +10,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TowerOfDaedelus_WebApp.styles.css" asp-append-version="true" />
+    <link rel="icon" href= "@Url.Content("~/favicon.ico")" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <img src="https://i.imgur.com/jcztLp3.png" alt="logo" width="50"/>
                 <a class="navbar-brand" asp-area="" asp-page="/Index">The Towers of Daedelus</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,6 +30,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        @if ((await AuthorizationService.AuthorizeAsync(User, "allPlayers")).Succeeded)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/PlayerTools/PointBuyCalculator">Point Buy Calculator</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
