--- a/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml.css
+++ b/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml.css
@@ -45,4 +45,6 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+  background-color: white;
+  text-align: left;
 }
