--- a/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/PlayerTools/PointBuyCalculator">Point Buy Calculator</a>
                             </li>
                         }
+                        <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/PlayerTools/PointBuyCalculator">Point Buy Calculator</a>
+                            </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
