- simplify bot classes - standardize bot logging - add database models - add database migration - updated database - Extended IdentityUser to ApplicationUser and added support for storing discord username - removed useless console writeline in command module test command - added support for AWS database Environment Variables - added database to AWS

--- a/TowerOfDaedelus_WebApp/Pages/Shared/_LoginPartial.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using TowerOfDaedelus_WebApp.Models
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
