initial work for implementing docker, kafka, and arango

--- a/TowerOfDaedelus_WebApp/Pages/Index.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Index.cshtml
@@ -10,7 +10,7 @@
             width: 100%;
             margin: 0 auto;
             padding: 0px;
-            background: url(https://i.imgur.com/7pI8GpX.png) no-repeat center center fixed;
+            background: url(@Properties.Resources.imgUriBackground) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
