--- a/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
+++ b/TowerOfDaedelus_WebApp/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authorization
+@using TowerOfDaedelus_WebApp.Models
 <!DOCTYPE html>
-@inject SignInManager<IdentityUser> signInManager;
+@inject SignInManager<ApplicationUser> signInManager;
 @inject IAuthorizationService AuthorizationService;
 <html lang="en">
 <head>
@@ -16,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="https://i.imgur.com/jcztLp3.png" alt="logo" width="50"/>
+                <img src="@Properties.Resources.imgUriLogoOnWhite" alt="logo" width="50"/>
                 <a class="navbar-brand" asp-area="" asp-page="/Index">The Towers of Daedelus</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -38,8 +39,9 @@
                         }
                         <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/PlayerTools/PointBuyCalculator">Point Buy Calculator</a>
-                            </li>
+                        </li>
                     </ul>
+                    <partial name="_LobbyStatusPartial"/>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
