Address compiler errors and initial Identity interface implementation

--- a/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Microsoft.AspNetCore.Identity.UI.V4.Pages.Account.Internal;
 @model ExternalLoginModel
 @{
     ViewData["Title"] = "Register";
