--- a/TowerOfDaedalus_WebApp_Razor/Pages/Shared/_LobbyStatusPartial.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Pages/Shared/_LobbyStatusPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using TowerOfDaedelus_WebApp.Models;
-
+﻿@using TowerOfDaedalus_WebApp_Razor.Properties
 @{
     
 }
@@ -18,6 +17,6 @@ function GetDate(date) {
 <ul class="navbar-nav">
     <li>
         
-        <img src="@Properties.Resources.imgUriLobbyStatusClosed" alt="Lobby is closed" width="74" height="60"/>
+        <img src="@Resources.imgUriLobbyStatusClosed" alt="Lobby is closed" width="74" height="60"/>
     </li>
 </ul>
