--- a/TowerOfDaedalus_WebApp_Razor/Pages/Shared/_LoginPartial.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Pages/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@using TowerOfDaedelus_WebApp.Models
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@using static TowerOfDaedalus_WebApp_Arango.Schema.Documents
+@inject SignInManager<Users> SignInManager
+@inject UserManager<Users> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
