remove email sender and identity user from razor project

--- a/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using static TowerOfDaedalus_WebApp_Arango.Schema.Documents;
+@inject SignInManager<Users> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
