fix docker compose and certificate errors

--- a/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
@@ -29,7 +29,7 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
-    </div>
+    </div>*@
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
