--- a/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TowerOfDaedalus_WebApp_Razor/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
@@ -45,7 +45,7 @@
                 </div>
             </form>
         </section>
-    </div>
+    </div>*@
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
